WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155408
[EFL] Fix debug build error since
r197690
https://bugs.webkit.org/show_bug.cgi?id=155408
Summary
[EFL] Fix debug build error since r197690
Joonghun Park
Reported
2016-03-13 07:37:46 PDT
Change %lld to %PRId instead to correct the error below. error: format ‘%lld’ expects argument of type ‘long long int’, but argument 5 has type ‘std::chrono::duration<long int, std::ratio<1l, 1000l> >::rep {aka long int}’ [-Werror=format=]
Attachments
Add attachment
proposed patch, testcase, etc.
Joonghun Park
Comment 1
2016-03-13 07:46:49 PDT
Committed
r198079
: <
http://trac.webkit.org/changeset/198079
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug