[EFL] Fix debug build error since r197690. Unreviewed. https://bugs.webkit.org/show_bug.cgi?id=155408

Unreviewed. Change %lld to %PRId instead to correct the error below.
error: format ‘%lld’ expects argument of type ‘long long int’,
but argument 5 has type ‘std::chrono::duration<long int, std::ratio<1l, 1000l> >::rep
{aka long int}’ [-Werror=format=]

* page/DOMTimer.cpp:
(WebCore::DOMTimer::updateTimerIntervalIfNecessary):

Canonical link: https://commits.webkit.org/173519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198079 268f45cc-cd09-0410-ab3c-d52691b4dbfc